--- a/src/components/pages/Contact/ContactForm.scss
+++ b/src/components/pages/Contact/ContactForm.scss
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: 10vh 0vh;
+  padding-top: 12.5em;
+  padding-bottom: 5em;
 }
 
 .topContent {
@@ -46,6 +47,7 @@
   font-weight: 500;
   border-radius: 1em;
   margin: 8px 0;
+  color: var(--text-color);
   width: 100%;
   font-size: 1.05em;
   width: 40%;
