--- a/src/components/pages/Dashboard/LiveChat (support)/Message/Message.scss
+++ b/src/components/pages/Dashboard/LiveChat (support)/Message/Message.scss
@@ -15,10 +15,10 @@
   margin-right: 10px;
 }
 .messageDesc {
-  padding: 10px;
+  padding: .5em 1em;
   border-radius: 20px;
-  background-color: #5928e5;
-  color: white;
+  background-color: var(--button-bg);
+  color: var(--button-text);
   max-width: 350px;
 }
 .messageBottom {
