new score update

--- a/src/components/shared/Modal/PurchaseModal.module.scss
+++ b/src/components/shared/Modal/PurchaseModal.module.scss
@@ -12,7 +12,7 @@
 
   &_pruchasem {
     width: 25%;
-    height: 22%;
+    height: auto;
     background: var(--background-important);
     border-radius: 1em;
     border: 2px solid var(--border-color);
